--- a/spec/fixtures/gateways.yml
+++ b/spec/fixtures/gateways.yml
@@ -1,15 +1,19 @@
 gateways:
   smart:
-    host: "127.0.0.1"
-    port: 6000
-    system_id: "hugo"
-    password: 'ggoohu'
-    system_type: ''         # default given according to SMPP 3.4 Spec
-    interface_version: 52
-    source_ton: 0
-    source_npi: 1
-    destination_ton: 1
-    destination_npi: 1
-    source_address_range: ''
-    destination_address_range: ''
-    enquire_link_delay_secs: 10
+    redis:
+      queue: smart
+      url: "redis://127.0.0.1:6379/0"
+    smpp:
+      host: "127.0.0.1"
+      port: 6000
+      system_id: "hugo"
+      password: 'ggoohu'
+      system_type: ''         # default given according to SMPP 3.4 Spec
+      interface_version: 52
+      source_ton: 0
+      source_npi: 1
+      destination_ton: 1
+      destination_npi: 1
+      source_address_range: ''
+      destination_address_range: ''
+      enquire_link_delay_secs: 10
